unpackaged/main/default/objects/Order_Erp__c/fields/OriginalDueDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalDueDate__c</fullName>
    <label>Original Due Date</label>
    <type>Date</type>
</CustomField>