unpackaged/main/default/objects/Order_Erp__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>credit_card</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>purchase_order</fullName>
                <label>Purchase Order</label>
            </value>
            <value>
                <fullName>buy_now_pay_later</fullName>
                <label>Buy Now Pay Later</label>
            </value>
            <value>
                <fullName>no_payment</fullName>
                <label>No Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>