unpackaged/main/default/objects/Order_Erp__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <label>POD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>