unpackaged/main/default/objects/Order_Erp__c/fields/PricingTier__c.field-meta.xml
<CustomField>
    <fullName>PricingTier__c</fullName>
    <label>Pricing Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>