unpackaged/main/default/objects/Order_Erp__c/fields/process_isCarbon__c.field-meta.xml
<CustomField>
    <fullName>process_isCarbon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isCarbon</label>
    <type>Checkbox</type>
</CustomField>