unpackaged/main/default/objects/Order_Erp__c/fields/process_isCNC_Machining__c.field-meta.xml
<CustomField>
    <fullName>process_isCNC_Machining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isCNC_Machining</label>
    <type>Checkbox</type>
</CustomField>