unpackaged/main/default/objects/Order_Erp__c/fields/process_isDMLS__c.field-meta.xml
<CustomField>
    <fullName>process_isDMLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isDMLS</label>
    <type>Checkbox</type>
</CustomField>