unpackaged/main/default/objects/Order_Erp__c/fields/process_isHPMultJetFusion__c.field-meta.xml
<CustomField>
    <fullName>process_isHPMultJetFusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isHPMultJetFusion</label>
    <type>Checkbox</type>
</CustomField>