unpackaged/main/default/objects/Order_Erp__c/fields/process_isInjection_Molding__c.field-meta.xml
<CustomField>
    <fullName>process_isInjection_Molding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isInjection_Molding</label>
    <type>Checkbox</type>
</CustomField>