unpackaged/main/default/objects/Order_Erp__c/fields/process_isInjectionMoldingTool__c.field-meta.xml
<CustomField>
    <fullName>process_isInjectionMoldingTool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isInjectionMoldingTool</label>
    <type>Checkbox</type>
</CustomField>