unpackaged/main/default/objects/Order_Erp__c/fields/process_isLSPc__c.field-meta.xml
<CustomField>
    <fullName>process_isLSPc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isLSPc</label>
    <type>Checkbox</type>
</CustomField>