unpackaged/main/default/objects/Order_Erp__c/fields/process_isOther__c.field-meta.xml
<CustomField>
    <fullName>process_isOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isOther</label>
    <type>Checkbox</type>
</CustomField>