unpackaged/main/default/objects/Order_Erp__c/fields/process_isOther_NotIncluded__c.field-meta.xml
<CustomField>
    <fullName>process_isOther_NotIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isOther (Not Included)</label>
    <type>Checkbox</type>
</CustomField>