unpackaged/main/default/objects/Order_Erp__c/fields/process_isPlasticExtrusion__c.field-meta.xml
<CustomField>
    <fullName>process_isPlasticExtrusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isPlasticExtrusion</label>
    <type>Checkbox</type>
</CustomField>