unpackaged/main/default/objects/Order_Erp__c/fields/process_isPolyJet_3D__c.field-meta.xml
<CustomField>
    <fullName>process_isPolyJet_3D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isPolyJet_3D</label>
    <type>Checkbox</type>
</CustomField>