unpackaged/main/default/objects/Order_Erp__c/fields/process_isSheet_metal__c.field-meta.xml
<CustomField>
    <fullName>process_isSheet_metal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isSheet_metal</label>
    <type>Checkbox</type>
</CustomField>