unpackaged/main/default/objects/Order_Erp__c/fields/process_isSLA__c.field-meta.xml
<CustomField>
    <fullName>process_isSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isSLA</label>
    <type>Checkbox</type>
</CustomField>