unpackaged/main/default/objects/Order_Erp__c/fields/process_isSLS__c.field-meta.xml
<CustomField>
    <fullName>process_isSLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isSLS</label>
    <type>Checkbox</type>
</CustomField>