unpackaged/main/default/objects/Order_Erp__c/fields/process_isStamping__c.field-meta.xml
<CustomField>
    <fullName>process_isStamping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isStamping</label>
    <type>Checkbox</type>
</CustomField>