unpackaged/main/default/objects/Order_Erp__c/fields/process_isUrethane_Casting__c.field-meta.xml
<CustomField>
    <fullName>process_isUrethane_Casting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isUrethane_Casting</label>
    <type>Checkbox</type>
</CustomField>