unpackaged/main/default/objects/Order_Erp__c/fields/processGroup_isMixed__c.field-meta.xml
<CustomField>
    <fullName>processGroup_isMixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>processGroup_isMixed</label>
    <type>Checkbox</type>
</CustomField>