unpackaged/main/default/objects/Order_Erp__c/fields/processGroup_isSubtractiveOnly__c.field-meta.xml
<CustomField>
    <fullName>processGroup_isSubtractiveOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>processGroup_isSubtractiveOnly</label>
    <type>Checkbox</type>
</CustomField>