unpackaged/main/default/objects/Order_Erp__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Orders ERP</relationshipLabel>
    <relationshipName>Orders_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>