unpackaged/main/default/objects/Order_Erp__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Quotes last status between RFQ,Auto, and Manual</description>
    <label>Quote Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>