unpackaged/main/default/objects/Order_Erp__c/fields/Redeemed_Points__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Points__c</fullName>
    <label>Redeemed Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>