unpackaged/main/default/objects/Order_Erp__c/fields/Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Date__c</fullName>
    <description>Date that a refund occurs in the marketplace</description>
    <inlineHelpText>This field is currently only populated for marketplace.</inlineHelpText>
    <label>Refund Date</label>
    <type>Date</type>
</CustomField>