unpackaged/main/default/objects/Order_Erp__c/fields/RoboOutsource__c.field-meta.xml
<CustomField>
    <fullName>RoboOutsource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Robo Outsource</label>
    <type>Checkbox</type>
</CustomField>