unpackaged/main/default/objects/Order_Erp__c/fields/Safe_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Contact_ID__c</fullName>
    <formula>casesafeid(ContactID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Contact ID</label>
    <type>Text</type>
</CustomField>