unpackaged/main/default/objects/Order_Erp__c/fields/Safe_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Opportunity_ID__c</fullName>
    <formula>casesafeid( OpportunityID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Opportunity ID</label>
    <type>Text</type>
</CustomField>