unpackaged/main/default/objects/Order_Erp__c/fields/Safe_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Order_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Order ID</label>
    <type>Text</type>
</CustomField>