unpackaged/main/default/objects/Order_Erp__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <label>Shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>