unpackaged/main/default/objects/Order_Erp__c/fields/Shipping_Discount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Discount__c</fullName>
    <label>Shipping Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>