unpackaged/main/default/objects/Order_Erp__c/fields/ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethod__c</fullName>
    <label>Shipping Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>