unpackaged/main/default/objects/Order_Erp__c/fields/UserDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>UserDUNSNumber__c</fullName>
    <label>User DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>