unpackaged/main/default/objects/Order_Erp__c/fields/UserParentDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>UserParentDUNSNumber__c</fullName>
    <label>User Parent DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>