unpackaged/main/default/objects/Order_Erp__c/fields/X2D_Order_URL__c.field-meta.xml
<CustomField>
    <fullName>X2D_Order_URL__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/rfqs?search="+Xometry_ERP_ID__c+"&amp;page=0&amp;perPage=25&amp;closeDate=-1&amp;","Go to this Quote in the ERP","_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2D Order URL</label>
    <type>Text</type>
</CustomField>