unpackaged/main/default/objects/Order_Erp__c/fields/Xometry_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_ERP_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This value is the unique order.id created in erp. The quote ID and Order ID are the same.</description>
    <externalId>true</externalId>
    <inlineHelpText>Value to use to look up an order in the ERP.</inlineHelpText>
    <label>Order ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>