unpackaged/main/default/objects/Order_Erp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Xometry_ERP_ID__c</columns>
    <columns>NAME</columns>
    <columns>ERP_Order_Url__c</columns>
    <columns>AccountID__c</columns>
    <columns>ContactID__c</columns>
    <columns>OpportunityID__c</columns>
    <columns>Order_ERP_CreatedDate__c</columns>
    <columns>ERP_Status__c</columns>
    <columns>Manufacturing_Process__c</columns>
    <columns>Order_ERP_Time_C__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>