unpackaged/main/default/objects/Order_Erp__c/listViews/All_My_Strategic_Target_Orders.listView-meta.xml
<ListView>
    <fullName>All_My_Strategic_Target_Orders</fullName>
    <columns>Xometry_ERP_ID__c</columns>
    <columns>ERP_Order_Url__c</columns>
    <columns>AccountID__c</columns>
    <columns>ContactID__c</columns>
    <columns>OpportunityID__c</columns>
    <columns>Order_ERP_CreatedDate__c</columns>
    <columns>ERP_Status__c</columns>
    <columns>Manufacturing_Process__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Strategic_Target__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All My Strategic Target Orders</label>
</ListView>